# mx-plug

./: Cargo.toml  README.md
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  lib.rs
crates/meta/: Cargo.toml
crates/meta/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  serialization.rs
plugin-demo/bridge/: Cargo.toml
plugin-demo/bridge/src/: lib.rs
plugin-demo/plugin/: Cargo.toml
plugin-demo/plugin/src/: lib.rs
plugin-demo/shared/: Cargo.toml
plugin-demo/shared/src/: lib.rs
test-smart-contract/: Cargo.toml  scripts.sh
test-smart-contract/meta/: Cargo.toml
test-smart-contract/meta/src/: main.rs
test-smart-contract/scenarios/: empty.scen.json
test-smart-contract/src/: empty.rs
test-smart-contract/tests/: empty_scenario_rs_test.rs
test-smart-contract/wasm/: Cargo.toml
test-smart-contract/wasm/src/: lib.rs
