[package]
name = "mx-plug-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mx-plug-meta = { path = "../meta" }
postcard = { version = "1.0.*", features = ["alloc"] }
serde = { version = "1.0.*", default-features = false }

